@@ -4,6 +4,10 @@ Localisation updates are done on betawiki and aren't listed here.
 0.14.11 - 16 August 2009
   * (bug 19057) Added user name parameter to configure-viewconfig-line message
   * (bug 19058) Added user name parameter to configure-old-summary message
+  * Updated AuthorProtect, Babel, CategoryOnUpload, Collection, ConfirmAccount,
+    EditOwn, EditUser, ExternalData, FlaggedRevs, LocalisationUpdate,
+    OggHandler, RT, SemanticForms, SemanticMediaWiki, TorBlock, Translate,
+    Uniwiki - Generic Edit Page, WebChat and WikiAtHome extensions.
 
 0.14.10 - 15 August 2009
   Added support for ReplaceSet, RT, UploadBlacklist, UsageStatistics,
